WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11124
REGRESSION (
r14297
): No drag image for partially-selected complex text
https://bugs.webkit.org/show_bug.cgi?id=11124
Summary
REGRESSION (r14297): No drag image for partially-selected complex text
mitz
Reported
2006-10-02 08:43:46 PDT
To reproduce, choose Debug > Use ATSU For All Text, select a single word from the middle of a sentence on this page, and then try to drag the selected text. Although drag and drop behaves as expected, there's no drag image, and with a debug build you get this in the console: ================= ERROR: ATSUDrawText() failed(-8792) (WebCore/platform/mac/FontMac.mm:505 drawComplexText) ================= This is a regression from
r14297
(fix for
bug 8845
).
Attachments
Pixel test
(342 bytes, text/html)
2006-10-04 01:41 PDT
,
mitz
no flags
Details
Patch
(33.82 KB, patch)
2006-12-26 11:30 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-10-04 01:41:11 PDT
Created
attachment 10889
[details]
Pixel test This invokes the same code that is used for the drag image, so it can be used for an automated pixel test.
mitz
Comment 2
2006-11-02 16:16:45 PST
This is very bad but should be easy to fix.
Stephanie Lewis
Comment 3
2006-11-08 14:31:42 PST
radar 4826775
mitz
Comment 4
2006-12-26 11:30:08 PST
Created
attachment 12038
[details]
Patch
Darin Adler
Comment 5
2006-12-27 22:03:40 PST
Comment on
attachment 12038
[details]
Patch r=me
Sam Weinig
Comment 6
2006-12-28 12:09:19 PST
Landed in
r18457
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug