LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=11124
          REGRESSION (r14297): No drag image for partially-selected complex text

        * fast/text/atsui-partial-selection-expected.checksum: Added.
        * fast/text/atsui-partial-selection-expected.png: Added.
        * fast/text/atsui-partial-selection-expected.txt: Added.
        * fast/text/atsui-partial-selection.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11124
          REGRESSION (r14297): No drag image for partially-selected complex text

        Test: fast/text/atsui-partial-selection.html

        * platform/Font.h: Changed comment.
        * platform/mac/FontMac.mm:
        (WebCore::Font::drawComplexText): Corrected the run length calculation.
        Changed the ATSUI layout parameters to know about the entire text run, rather
        than just the range we are drawing. ATSUI measures the characters before
        the range and positions the range accordingly.



Canonical link: https://commits.webkit.org/15501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18457 268f45cc-cd09-0410-ab3c-d52691b4dbfc